# platform.core.appfw.launchpad

./: CMakeLists.txt  launchpad.manifest  launchpad.pc.in
inc/: key.h  launchpad.h  launchpad_common.h  loader_info.h  menu_db_util.h  perf.h  preexec.h  preload.h  process_pool_preload.h  sigchild.h
packaging/: default.loader  default.loader.in  launchpad-process-pool.service  launchpad-process-pool.socket  launchpad.spec  preload_list.txt  preload_list.txt.in
src/: launchpad.c  launchpad_common.c  launchpad_lib.c  launchpad_loader.c  loader_info.c
